--- a/index.html
+++ b/index.html
@@ -74,13 +74,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="email">メールアドレス *</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="phone">電話番号</label>
-                        <input type="tel" id="phone" name="phone">
+                        <label for="birthdate">生年月日 *</label>
+                        <input type="date" id="birthdate" name="birthdate" required>
                     </div>
 
                     <div class="form-group">
