--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="birthdate">生年月日 *</label>
-                        <input type="date" id="birthdate" name="birthdate" required>
+                        <label for="displayName">Google Meet表示名 *</label>
+                        <input type="text" id="displayName" name="displayName" required placeholder="例: 山田太郎">
                     </div>
 
                     <div class="form-group">
